[metadata]
name = iohub
author = CZ Biohub and iohub contributors
author_email = iohub@czbiohub.org
url = https://github.com/czbiohub/iohub
license = BSD 3-Clause License
description = 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
project_urls =
    Bug Tracker = https://github.com/czbiohub/iohub/issues
    Documentation = https://github.com/czbiohub/iohub
    Source Code = https://github.com/czbiohub/iohub
    User Support = https://github.com/czbiohub/iohub/issues

[options]
package = find:
include_package_data = True
python_requires = >3.9
setup_requires = setuptools_scm
install_requires =
    pandas>=1.5.2
    pydantic>=1.10.2
    tifffile>=2023.2.3, <2023.3.15
    natsort>=7.1.1
    ndtiff>=1.9.0
    zarr>=2.13
    tqdm
    pillow>=9.4.0

[options.extras_require]
dev =
    flake8
    pytest>=5.0.0
    pytest-cov
    hypothesis>=6.61.0
    requests>=2.22.0
    wget>=3.2
    ome-zarr>=0.6.1
doc =
    numpydoc==1.1.0
    sphinx==4.2.0
    sphinx-rtd-theme==1.2.0
    sphinx-copybutton==0.4.0
    sphinx-multiversion==0.2.4
