[metadata]
name = iohub
author = CZ Biohub and iohub contributors
author_email = iohub@czbiohub.org
url = https://github.com/czbiohub-sf/iohub
license = BSD 3-Clause License
description = N-dimensional bioimaging data I/O with OME metadata in Python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
project_urls =
    Bug Tracker = https://github.com/czbiohub-sf/iohub/issues
    Documentation = https://czbiohub-sf.github.io/iohub
    Source Code = https://github.com/czbiohub-sf/iohub
    User Support = https://github.com/czbiohub-sf/iohub/issues

[options]
package = find:
include_package_data = True
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
    pandas>=1.5.2
    pydantic>=1.10.2, <2
    tifffile>=2023.2.3, <2023.3.15
    natsort>=7.1.1
    ndtiff>=2.2.1
    zarr>=2.13, <2.16
    tqdm
    pillow>=9.4.0
    blosc2

[options.extras_require]
dev =
    black
    flake8
    pytest>=5.0.0
    pytest-cov
    hypothesis>=6.61.0
    requests>=2.22.0
    wget>=3.2
    ome-zarr>=0.6.1
doc =
    matplotlib
    numpydoc==1.1.0
    sphinx==4.2.0
    pydata-sphinx-theme==0.13.3
    sphinx-copybutton==0.4.0
    sphinx-multiversion==0.2.4
    sphinx-sitemap==2.5.0
    sphinx-gallery==0.13.0
